--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="container header_content">
             <div class="logo">ic "repair desing project"</div>
             <nav>
                 <ul class="nav">
-                    <li><a href="#home" class="nav_a">home</a></li>
-                    <li><a href="#projects" class="nav_a">projects</a></li>
-                    <li><a href="#measurement" class="nav_a">measurement</a></li>
-                    <li><a href="#team" class="nav_a">team</a></li>
-                    <li><a href="#reviews" class="nav_a">reviews</a></li>
-                    <li><a href="#contacts" class="nav_a">contacts</a></li>
+                    <li><a href="#" class="nav_a nav_a_active">home</a></li>
+                    <li><a href="#" class="nav_a">projects</a></li>
+                    <li><a href="#" class="nav_a">measurement</a></li>
+                    <li><a href="#" class="nav_a">team</a></li>
+                    <li><a href="#" class="nav_a">reviews</a></li>
+                    <li><a href="#" class="nav_a">contacts</a></li>
                 </ul>
             </nav>
             <div id="tel">+7 (928) 768-32-39
@@ -30,14 +30,148 @@
     </header>
     <main>
         <section class="block_1">
-            <div class="block_1_1">
-                <h1>Turnkey Repair in the<br> city of <span class="title">Rostov-on-Don</span></h1>
-                <p class="discount">Get ready-made turnkey repairs on time<br> with work time saving up to 45 days and 20%
+            <div class="block_1_1 container">
+                <h1 class="yo">Turnkey Repair in the<br> city of <span class="title">Rostov-on-Don</span></h1>
+                <p class="discount">Get ready-made turnkey repairs on time<br> with work time saving up to 45 days and
+                    20%
                     from cost of materials due to the organization of work</p>
-                <div><button class="button button_2">calculate the cost</button><button class="button" id="butt">submit your application</button>
+                <div><button class="button button_2">calculate the cost</button><button class="button" id="butt">submit
+                        your application</button>
                 </div>
             </div>
             <div class="overlay"></div>
+        </section>
+        <section class="block_2">
+            <div class="container block_2_1">
+                <div class="project_info">
+                    <h2 class="yo">completed project</h2>
+                    <p class="description">Only a small part of the work performed by our company is presented on the
+                        site. For 14 years on in the construction<br> market we have made happy more than 1000 families
+                    </p>
+                    <div class="info">
+                        <div>
+                            <h3 class="yo info_title">City:</h3>
+                            <p class="info_content">Rostov-on-Don<br>LCD admiral</p>
+                        </div>
+                        <div>
+                            <h3 class="yo info_title">apartment area:</h3>
+                            <p class="info_content">81 m2</p>
+                        </div>
+                        <div>
+                            <h3 class="yo info_title">Repair time:</h3>
+                            <p class="info_content">3.5 months</p>
+                        </div>
+                        <div>
+                            <h3 class="yo info_title">Repair Cost:</h3>
+                            <p class="info_content">Upon request</p>
+                        </div>
+                    </div>
+                    <div class="rulet"><img class="im_1" src="image/Vecto-L.png"><img class="im_2"
+                            src="image/Vector (Stroke).png"><img class="im_3" src="image/Rectangle 7.4.png"><img
+                            class="im_3" src="image/Rectangle 7.3.png"><img class="im_2"
+                            src="image/Rectangle 7.3.png"><img class="im_1" src="image/Vector (Stroke) (1).png"><img
+                            src="image/Vecto-R.png"></div>
+                </div>
+                <div class="project_example">
+                    <ul>
+                        <li><a href="#" class="active yo">Rostov-on-Don, Admiral</a></li>
+                        <li><a href="#" class="yo">Sochi Thieves</a></li>
+                        <li><a href="#" class="yo">Rostov-on-Don Patriotic</a></li>
+                    </ul>
+                    <img src="image\image 2.1.png" alt="desing" width="679px" height="482px">
+                </div>
+            </div>
+        </section>
+        <section class="block_3">
+            <div class="container">
+                <div class="control">
+                    <h2 class="yo">online control</h2>
+                    <div class="camera_img"><img class="line" src="image/Rectangle 6.7.png" alt="line"><img
+                            src="image/camera.png" alt="camera"><img class="line" src="image/Rectangle 6.7.png"
+                            alt="line">
+                    </div>
+                    <div class="video">
+                        <img class="video_img" src="image/image 6.png" alt="video">
+                        <div class="polygon"><img src="image/Polygon.png" alt="Polygon"></div>
+                        <div class="ellipse"><img src="image/Ellipse.png" alt="Ellipse"></div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="br"><img src="image/Rectangle 6.9.svg" alt="line">
+                    </div>
+                    <p class="description_control">At each facility, a camera is installed that broadcasts the progress
+                        of work on the clock. At any time, you can go to our website and monitor the progress of work in
+                        your apartment. You can watch the live broadcast from one of our facilities!<br> Leave a request
+                        below and you will receive a link to the broadcast.</p>
+                    <form>
+                        <div class="form_input">
+                            <div class="input input_1"><label>Name</label><input type="text" value="What is your name:">
+                            </div>
+                            <div class="input input_2"><label>Phone</label><input type="text"
+                                    value="Your phone number:">
+                            </div>
+                            <button class="button submit button_3">submit</button>
+                        </div>
+                        <div class="check_box"><input class="checkbox" type="checkbox"><span>I agree to the processing
+                                of personal data</span></div>
+                    </form>
+                </div>
+                <div class="repair">
+                    <h2 class="yo">tipes of repair</h2>
+                    <div class="instr"><img class="line" src="image/Rectangle 6.7.png" alt="line"><img
+                            src="image/instr.svg" alt="camera"><img class="line" src="image/Rectangle 6.7.png"
+                            alt="line">
+                    </div>
+                    <div class="example_desing">
+                        <div class="desing_img">
+                            <div><img src="image/rep1.jpg" alt=""></div>
+                            <div class="desing_ul">
+                                <h3 class="yo">Redecorating</h3>
+                                <ul>
+                                    <li>Dismantling of old coatings</li>
+                                    <li>Wallpapering</li>
+                                    <li>Painting walls and ceilings</li>
+                                    <li>Laying flooring</li> 
+                                    <li>Replacing plumbing</li>
+                                    <li>Replacing sockets and switches</li>
+                                    <li>Replacing doors</li>       
+                                </ul>
+                            </div>
+                            <button class="button_desing yo">from 900 rub / m<sup>2</sup></button>
+                        </div>
+                        <div class="desing_img">
+                            <div><img src="image/rep2.jpg" alt=""></div>
+                            <div class="desing_ul">
+                                <h3 class="yo">Overhaul</h3>
+                                <ul>
+                                    <li>Dismantling of old coatings</li>
+                                    <li>Wallpapering</li>
+                                    <li>Painting walls and ceilings</li>
+                                    <li>Laying flooring</li> 
+                                    <li>Replacing plumbing</li>
+                                    <li>Replacing sockets and switches</li>
+                                    <li>Replacing doors</li>        
+                                </ul>
+                            </div>
+                            <button class="button_desing yo">from 1800 rub / m<sup>2</sup></button>
+                        </div>
+                        <div class="desing_img">
+                            <div><img src="image/rep3.jpg" alt=""></div>
+                            <div class="desing_ul">
+                                <h3 class="yo">Designer Repair</h3>
+                                <ul>
+                                    <li>Dismantling of old coatings</li>
+                                    <li>Wallpapering</li>
+                                    <li>Painting walls and ceilings</li>
+                                    <li>Laying flooring</li> 
+                                    <li>Replacing plumbing</li>
+                                    <li>Replacing sockets and switches</li>
+                                    <li>Replacing doors</li>       
+                                </ul>
+                            </div>
+                            <button class="button_desing yo">from 4000 rub / m<sup>2</sup></button>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
 </body>
