--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="discount">Get ready-made turnkey repairs on time<br> with work time saving up to 45 days and
                     20%
                     from cost of materials due to the organization of work</p>
-                <div><button class="button button_2">calculate the cost</button><button class="button" id="butt">submit
+                <div class="button_section_1"><button class="button button_2">calculate the cost</button><button class="button" id="butt">submit
                         your application</button>
                 </div>
             </div>
@@ -53,6 +53,7 @@
                     <p class="description">Only a small part of the work performed by our company is presented on the
                         site. For 14 years on in the construction<br> market we have made happy more than 1000 families
                     </p>
+                    <div class="foto_375"></div>
                     <div class="info">
                         <div>
                             <h3 class="yo info_title">City:</h3>
@@ -120,6 +121,7 @@
                         <div class="check_box"><input id="agree_1" class="checkbox chb_1" type="checkbox"><label
                                 for="agree_1">I agree to the processing
                                 of personal data</label></div>
+                                <button class="button button_375">submit</button>
                     </form>
                 </div>
                 <div class="repair">
@@ -236,6 +238,7 @@
                         <li><a class="styles" href="#">High tech</a></li>
                         <li><a class="styles" href="#">Eclecticism</a></li>
                     </ul>
+                    <div class="fantasies_375"></div>
                 </div>
                 <div class="gallery gallery_1"><img src="image/gallery (1).png"><img src="image/gallery (2).png"></div>
                 <div class="gallery gallery_2"><img src="image/gallery (3).png"><img src="image/gallery (4).png"></div>
@@ -252,7 +255,7 @@
                     </div>
                     <p>80% of our customers recommend us to their<br>friends and family.</p>
                     <div class="example_clients">
-                        <div class="client_wrapepr">
+                        <div class="client_wrapepr client_1">
                             <div class="client">
                                 <img class="client_foto" src="image/client-image-1.png" alt="foto client">
                                 <h3 class="yo">Fedosova Maria<br>Konstantinovna</h3>
@@ -275,7 +278,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="client_wrapepr">
+                        <div class="client_wrapepr client_1">
                             <div class="client">
                                 <img class="client_foto" src="image/client-image-2.png" alt="foto client">
                                 <h3 class="yo">Afanasyev Sergey<br>Alexandrovich</h3>
