--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <p class="discount">Get ready-made turnkey repairs on time<br> with work time saving up to 45 days and
                     20%
                     from cost of materials due to the organization of work</p>
-                <div class="button_section_1"><button class="button button_2">calculate the cost</button><button class="button" id="butt">submit
+                <div class="button_section_1"><button class="button button_2">calculate the cost</button><button
+                        class="button" id="butt">submit
                         your application</button>
                 </div>
             </div>
@@ -54,6 +55,7 @@
                         site. For 14 years on in the construction<br> market we have made happy more than 1000 families
                     </p>
                     <div class="foto_375"></div>
+
                     <div class="info">
                         <div>
                             <h3 class="yo info_title">City:</h3>
@@ -72,11 +74,15 @@
                             <p class="info_content">Upon request</p>
                         </div>
                     </div>
-                    <div class="rulet"><img class="im_1" src="image/Vecto-L.png"><img class="im_2"
-                            src="image/Vector (Stroke).png"><img class="im_3" src="image/Rectangle 7.4.png"><img
-                            class="im_3" src="image/Rectangle 7.3.png"><img class="im_2"
-                            src="image/Rectangle 7.3.png"><img class="im_1" src="image/Vector (Stroke) (1).png"><img
-                            src="image/Vecto-R.png"></div>
+                    <div class="rulet">
+                        <ul class="rulet_1">
+                            <li class="row row_left"></li>
+                            <li class="dot">•</li>
+                            <li class="dot inactive">•</li>
+                            <li class="dot inactive">•</li>
+                            <li class="row row_right"></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="project_example">
                     <ul>
@@ -121,7 +127,7 @@
                         <div class="check_box"><input id="agree_1" class="checkbox chb_1" type="checkbox"><label
                                 for="agree_1">I agree to the processing
                                 of personal data</label></div>
-                                <button class="button button_375">submit</button>
+                        <button class="button button_375">submit</button>
                     </form>
                 </div>
                 <div class="repair">
@@ -238,7 +244,12 @@
                         <li><a class="styles" href="#">High tech</a></li>
                         <li><a class="styles" href="#">Eclecticism</a></li>
                     </ul>
-                    <div class="fantasies_375"></div>
+                    <div class="fantasies_375">
+                        <ul class="rulet_1 rulet_fantasies">
+                            <li class="row row_left"></li>
+                            <li class="row row_right"></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="gallery gallery_1"><img src="image/gallery (1).png"><img src="image/gallery (2).png"></div>
                 <div class="gallery gallery_2"><img src="image/gallery (3).png"><img src="image/gallery (4).png"></div>
@@ -248,7 +259,7 @@
         <section class="block_6">
             <div class="container">
                 <div class="clients">
-                    <h2 class="yo">your clients</h2>
+                    <h2 class="yo">our clients</h2>
                     <div class="hand"><img class="line" src="image/Rectangle 6.7.png" alt="line"><img
                             src="image/handshake-image.svg" alt="camera"><img class="line" src="image/Rectangle 6.7.png"
                             alt="line">
