--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     <p class="description">Only a small part of the work performed by our company is presented on the
                         site. For 14 years on in the construction<br> market we have made happy more than 1000 families
                     </p>
-                    <div class="foto_375"></div>
+                    <div id="foto" class="foto_375">
+                    </div>
 
                     <div class="info">
                         <div>
@@ -76,11 +77,11 @@
                     </div>
                     <div class="rulet">
                         <ul class="rulet_1">
-                            <li id="row_left" class="row row_left"></li>
+                            <li id="row_left" class="row row_left" tabindex="0"></li>
                             <li id="dot1" class="dot inactive"><span class="dot_click">•</span></li>
                             <li id="dot2" class="dot inactive"><span class="dot_click">•</span></li>
                             <li id="dot3" class="dot inactive"><span class="dot_click">•</span></li>
-                            <li id="row_righ" class="row row_right"></li>
+                            <li id="row_righ" class="row row_right" tabindex="0"></li>
                         </ul>
                     </div>
                 </div>
@@ -90,7 +91,8 @@
                         <li><a id="Sochi" class="yo">Sochi Thieves</a></li>
                         <li><a id="Patriot" class="yo">Rostov-on-Don Patriotic</a></li>
                     </ul>
-                    <div id="Image_project"><img src="image\image 2.1.png" alt="desing" width="679px" height="482px"></div>
+                    <div id="Image_project"><img src="image\image 2.1.png" alt="desing" width="679px" height="482px">
+                    </div>
                 </div>
             </div>
         </section>
